lagt til drupal_commands

--- a/bouvet_profile.info.yml
+++ b/bouvet_profile.info.yml
@@ -52,6 +52,9 @@ dependencies:
   - scheduler
   - deploy
   - field_group
+  - structure_sync
+  - content_sync
+  - drush_commands
 themes:
   - bartik
   - seven
