--- a/config/install/core.extension.yml
+++ b/config/install/core.extension.yml
@@ -51,6 +51,9 @@ module:
   redirect_404: 0
   scheduler: 0
   search: 0
+  search_api: 0
+  search_api_attachments: 0
+  search_api_db: 0
   shortcut: 0
   structure_sync: 0
   system: 0
