lagt til facets modul

--- a/config/install/search_api.index.index.yml
+++ b/config/install/search_api.index.index.yml
@@ -20,7 +20,7 @@ field_settings:
     type_locked: true
     hidden: true
   status:
-    label: null
+    label: status
     datasource_id: 'entity:node'
     property_path: status
     type: boolean
@@ -30,7 +30,7 @@ field_settings:
       module:
         - node
   uid:
-    label: null
+    label: uid
     datasource_id: 'entity:node'
     property_path: uid
     type: integer
