lagt til noe config

--- a/config/install/user.role.authenticated.yml
+++ b/config/install/user.role.authenticated.yml
@@ -5,7 +5,7 @@ dependencies: {  }
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
 id: authenticated
-label: 'Autentisert bruker'
+label: 'Authenticated user'
 weight: 1
 is_admin: false
 permissions:
