--- a/config/install/core.extension.yml
+++ b/config/install/core.extension.yml
@@ -4,6 +4,7 @@ module:
   big_pipe: 0
   block: 0
   block_content: 0
+  bouvet_drush_commands: 0
   bouvet_utils: 0
   breakpoint: 0
   ckeditor: 0
