lagt til media som en dependency

--- a/bouvet_profile.info.yml
+++ b/bouvet_profile.info.yml
@@ -32,6 +32,7 @@ dependencies:
   - views
   - views_ui
   - automated_cron
+  - media
   # Contrib modules (requires extra downloading)
   - admin_toolbar
   - admin_toolbar_tools
