satt bouvet som default theme

--- a/config/install/system.theme.yml
+++ b/config/install/system.theme.yml
@@ -1,5 +1,5 @@
 admin: seven
-default: bartik
+default: bouvet
 _core:
   default_config_hash: eS6e5F-mvjA4YL70mXFKVrPH30Fmj2ckXJWPbqPKMcU
 langcode: nb
