--- a/config/install/core.extension.yml
+++ b/config/install/core.extension.yml
@@ -76,6 +76,7 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
+  bouvet: 0
 profile: bouvet_profile
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
