--- a/config/install/system.site.yml
+++ b/config/install/system.site.yml
@@ -8,7 +8,7 @@ page:
   front: /node
 admin_compact_mode: false
 weight_select_max: 100
-langcode: en
+langcode: nb
 default_langcode: nb
 _core:
   default_config_hash: 1bBA2xfM_bUEtqDeOqnd00x4_DCpz9dgxfnBffTycIU
