--- a/config/install/block.block.bouvet_theme_account_menu.yml
+++ b/config/install/block.block.bouvet_theme_account_menu.yml
@@ -7,11 +7,11 @@ dependencies:
   module:
     - system
   theme:
-    - bouvet
+    - bouvet_theme
 _core:
   default_config_hash: 3iUCv1yoptRYopz3PCcq51rRTU19CsqjZXDQ0AjALTs
-id: bouvet_account_menu
-theme: bouvet
+id: bouvet_theme_account_menu
+theme: bouvet_theme
 region: content
 weight: 0
 provider: null
