--- a/config/install/block.block.bouvet_theme_content.yml
+++ b/config/install/block.block.bouvet_theme_content.yml
@@ -5,11 +5,11 @@ dependencies:
   module:
     - system
   theme:
-    - bouvet
+    - bouvet_theme
 _core:
   default_config_hash: M3aH7671xCwZT8PejR7W4nAhsXbGYpUHH-M2Ol1u0e0
-id: bouvet_content
-theme: bouvet
+id: bouvet_theme_content
+theme: bouvet_theme
 region: content
 weight: 0
 provider: null
