--- a/config/install/block.block.bouvet_theme_footer.yml
+++ b/config/install/block.block.bouvet_theme_footer.yml
@@ -7,11 +7,11 @@ dependencies:
   module:
     - system
   theme:
-    - bouvet
+    - bouvet_theme
 _core:
   default_config_hash: cm1T5AjdymS4rD9lkYWk1DC9ZSmjzBQLLi1I8vNI8Lc
-id: bouvet_footer
-theme: bouvet
+id: bouvet_theme_footer
+theme: bouvet_theme
 region: content
 weight: 0
 provider: null
