--- a/config/install/block.block.bouvet_theme_main_menu.yml
+++ b/config/install/block.block.bouvet_theme_main_menu.yml
@@ -7,11 +7,11 @@ dependencies:
   module:
     - system
   theme:
-    - bouvet
+    - bouvet_theme
 _core:
   default_config_hash: '-G_Zslsz_CXjJcvO7aPhKvIZuYkAty2M4Aefm8QdO0E'
-id: bouvet_main_menu
-theme: bouvet
+id: bouvet_theme_main_menu
+theme: bouvet_theme
 region: content
 weight: 0
 provider: null
