--- a/config/install/block.block.bouvet_theme_page_title.yml
+++ b/config/install/block.block.bouvet_theme_page_title.yml
@@ -3,11 +3,11 @@ langcode: nb
 status: true
 dependencies:
   theme:
-    - bouvet
+    - bouvet_theme
 _core:
   default_config_hash: rLVRP5pbTikrXYyzlTPDvqaFv6EMixmbcz1AMKR88e4
-id: bouvet_page_title
-theme: bouvet
+id: bouvet_theme_page_title
+theme: bouvet_theme
 region: content
 weight: -50
 provider: null
