--- a/config/install/block.block.bouvet_theme_powered.yml
+++ b/config/install/block.block.bouvet_theme_powered.yml
@@ -5,11 +5,11 @@ dependencies:
   module:
     - system
   theme:
-    - bouvet
+    - bouvet_theme
 _core:
   default_config_hash: OD0kYhKi4i1lp7aJTQPEYMLudSXalAlzuFnqrPaQAv8
-id: bouvet_powered
-theme: bouvet
+id: bouvet_theme_powered
+theme: bouvet_theme
 region: content
 weight: 10
 provider: null
