--- a/config/install/block.block.bouvet_theme_tools.yml
+++ b/config/install/block.block.bouvet_theme_tools.yml
@@ -7,11 +7,11 @@ dependencies:
   module:
     - system
   theme:
-    - bouvet
+    - bouvet_theme
 _core:
   default_config_hash: FvasSFHRlRqOWNlYDaGr9oa5W5TywAjym31cuvEvxTI
-id: bouvet_tools
-theme: bouvet
+id: bouvet_theme_tools
+theme: bouvet_theme
 region: content
 weight: 0
 provider: null
