--- a/bouvet_profile.info.yml
+++ b/bouvet_profile.info.yml
@@ -3,6 +3,7 @@ type: profile
 description: 'Install with commonly used features and must-have contrib modules pre-configured.'
 version: 1.0
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - admin_toolbar
   - automated_cron
